chore: Reestruturado o projeto e criado endpoint para obter os players
